--- a/src/Components/cssStyles/darkMode.scss
+++ b/src/Components/cssStyles/darkMode.scss
@@ -65,6 +65,11 @@
         border: 1px solid white;
       }
     }
+    .gridMode {
+      .gridModeItem {
+        background-color: #2A2550;
+      }
+    }
   }
   
   .lightMode {
