--- a/src/Components/cssStyles/languagesChanges.scss
+++ b/src/Components/cssStyles/languagesChanges.scss
@@ -1,5 +1,6 @@
 .leftToRightLanguages {
     direction: ltr !important;
+    transition: all .4s;
     .showUsers {
         table {
             tr {
