--- a/src/Components/cssStyles/modals.scss
+++ b/src/Components/cssStyles/modals.scss
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    max-height: 100vh;
     font-family: Vazirmatn , serif;
     backdrop-filter: blur(3px);
     animation: animation2 1s;
