fix inputs styles & add a modal to edit & add users

--- a/src/Components/cssStyles/animations.scss
+++ b/src/Components/cssStyles/animations.scss
@@ -1,14 +1,14 @@
 
 @keyframes normalAppearFromRight {
-    0% {
-      opacity: 0;
-      transform: translateX(12px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(12px);
   }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
   
 @keyframes appearFromLeftBottom {
   0% {
@@ -79,6 +79,18 @@
     transform: scaleX(1);
   }
 }
+
+@keyframes scaleAnime {
+  0% {
+    opacity: 0;
+    transform: scale(.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .showUserModalAnimation {
   animation: animation3 .5s !important;
 }
