--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -1,6 +1,5 @@
 @import url("./reset.scss");
 @import url("./aboutProjectRoute.scss");
-@import url("./addUsersForm.scss");
 @import url("./animations.scss");
 @import url("./darkMode.scss");
 @import url("./fixedBtns.scss");
@@ -12,3 +11,4 @@
 @import url("./showUsers.scss");
 @import url("./languagesChanges.scss");
 @import url("./gridMode.scss");
+@import url("./editModal.scss");
