--- a/src/Components/cssStyles/bundle.scss
+++ b/src/Components/cssStyles/bundle.scss
@@ -11,4 +11,5 @@
 @import url("./showUsers.scss");
 @import url("./languagesChanges.scss");
 @import url("./gridMode.scss");
-@import url("./editModal.scss");
+@import url("./addEditModal.scss");
+@import url("./notFoundRoute.scss");
