--- a/src/Components/cssStyles/modals.scss
+++ b/src/Components/cssStyles/modals.scss
@@ -40,7 +40,7 @@
           p {
             margin-top: 2rem;
             .subject {
-              text-align: right;
+              float: right;
               font-weight: 600;
               color: #2c3e50;
             }
@@ -49,6 +49,7 @@
               color: #7f8c8d;
             }
             .valueInfo {
+              float: right;
               margin-top: 1rem;
             }
           }
