--- a/src/Components/cssStyles/languagesChanges.scss
+++ b/src/Components/cssStyles/languagesChanges.scss
@@ -36,6 +36,16 @@
     }
     .showUserModal {
         .showUserInfo {
+            .text {
+                p {
+                    .value {
+                        float: left;
+                    }
+                    .subject {
+                        float: left;    
+                    }
+                }
+            }
             .userProfileImage {
                 margin: 2rem 4rem 0 0 !important;
             }
@@ -64,7 +74,7 @@
             }
         }
     }
-    .editModal {
+    .addEditModal {
         .leftAway {
             margin-left: 9.4rem;
         }
